# laoma

./: .gitignore  AGENTS.md  README.md  本地运行文档.md
deploy/: fix_api.sh  init.sql  install.sh  nginx.conf  resource-api.service  start.ps1  stop.ps1  部署文档.md
deploy/nginx/: 443.conf  80.conf
resource-admin/: index.html  package.json  tsconfig.json  vite.config.ts
resource-admin/src/: App.vue  main.ts
resource-admin/src/api/: auth.ts  category.ts  index.ts  resource.ts  share.ts  statistics.ts  user.ts
resource-admin/src/router/: index.ts
resource-admin/src/store/: admin.ts
resource-admin/src/types/: index.ts
resource-admin/src/views/: CategoryManage.vue  DashboardView.vue  LoginView.vue  ResourceManage.vue  SettingsView.vue  ShareManage.vue  UserManage.vue
resource-api/: pyproject.toml  requirements.txt
resource-api/app/: config.py  database.py  main.py
resource-api/app/middleware/: error_handler.py
resource-api/app/models/: category.py  resource.py  response.py  share.py  user.py
resource-api/app/routers/: admin.py  auth.py  categories.py  favorites.py  resources.py  shares.py  upload.py
resource-api/app/services/: admin_service.py  auth_service.py  captcha_service.py  category_service.py  notification_service.py  resource_service.py  share_service.py
resource-api/app/utils/: deps.py  jwt.py
resource-api/scripts/: import_users.py  init_db.py  resource-api.service  seed_data.py  seed_resources.py  start_api.sh
resource-web/: index.html  package.json  tsconfig.json
resource-web/src/: App.vue
resource-web/src/api/: auth.ts  category.ts  (+3 more)
(+27 files in other folders)
